# gorage

./: .gitignore  CMakeLists.txt  README.md  example.cpp
include/: Base64.hpp  BinaryFileStorage.hpp  Bytes.hpp  Cache.hpp  DetailedStorage.hpp  File.hpp  FileStorage.hpp  FlatStorage.hpp  Id.hpp  Index.hpp  IntegrityStorage.hpp  ItemStorage.hpp  Json.cpp  Json.hpp  Key.hpp  MemoryStorage.hpp  Pointer.hpp  RandomName.hpp  RandomString.hpp  Set.hpp  Storage.hpp  Usi.hpp  Worker.hpp  aliases.hpp  exceptions.hpp  gorage.cpp  gorage.hpp  random.hpp
modules/blake3/: blake3.c  blake3.h
modules/rapidjson/error/: en.h
src/: BinaryFileStorage.cpp  Cache.cpp  FileStorage.cpp  ItemStorage.cpp  Storage.cpp  random.cpp
storage/metadata/: 1234.json
test/: common.hpp  main.cpp  strange.hpp  test_Index.hpp  test_IntegrityStorage.hpp  test_ItemStorage.hpp  test_Json.cpp  test_Json.hpp  test_MemoryStorage.hpp  test_Storage.hpp
